CHANGELOG
== Mar 2, 2012
* Showing 2 columns on the Admin Dashboard instead of 3
* Temporarily Removed comments from the Admin Dashboard
* Improved SQL performance for index page
* Improve layout for iPad
* Added links to Version History lists (WIP for full Versioning system)

== Feb 25, 2012
* Youtube Video Helper:
*   Auto embed video given the youtube video ID
*   Auto adjust video size according to screen resolution
*   Auto add Youtube screenshot to main article view
* Slightly increased image size for article page
* Slightly reduced image size for mobile view to fit on smaller devices
* Added Captcha to registration page.
* Show Youtube Video above item body if set by the user.
* Show "Youtube Source" if the item is a youtube video.

== Feb 23, 2012
* fixed date on item breadcrumb
* auto Posting to Twitter stable
* added Favicon
* hopefully fixed forced logout issues
* using Dalli as memcached server

== Feb 22, 2012
* removed SOLR resque
* changed SOLR to be local machine

== Feb 21, 2012
* disabled Cloudfront for now

== Feb 20, 2012
* fixed small bug on the new item form
* updated Gems
* unicorn on production server

== Feb 10, 2012
* Larger image caption, up to 60 chars.
* updated PG gem
* removed tooltip and image gallery for touch screen devices
* fixed bug of highlight items

== Feb 9, 2012
* Added Font asjustment to items, can increase/decrease font size
* Better Anti-alising for readability
* slight larger font
* More rspec tests for views

== Feb 7, 2012
* Upgraded to Rails 3.2.1, Devise 2.0.1, and all gems
* A lot of RSPEC Test

== Feb 6, 2012
* Added Tooltip for items on main page boxes.
* wrap text and make items fill the boxes.
* darker font
* added image caption and using <figure> tag for main item image
* Main item image now shows on Safari Reader

== Feb 5, 2012
* Implemented Roles, 75% completed.
* Treat Admin Users as users on front end
* Admin interface bug fixes and improvements
* Pages bug fix

== Jan 30, 2012